TP2/y.output
Terminals which are not used

   ERROR
   BTEXT
   BBEIU
   BEMAIL
   BURL
   BAFFIL
   BLIST


Grammar

    0 $accept: Report $end

    1 Report: FrontMatter Body '$'

    2 FrontMatter: Title SubTitle Authors Date Instituition Keywords Abstract Aknowledgements Toc Lof Lot

    3 Title: BTITLE TEXT ENDARG

    4 SubTitle: BSTITLE TEXT ENDARG
    5         | /* empty */

    6 Authors: Author Authors
    7        | /* empty */

    8 Author: Bauthor Name AuthorOPT ENDARG

    9 Bauthor: BAUTHOR

   10 Name: TEXT

   11 AuthorOPT: SEP Nident AuthorOPT
   12          | SEP Url AuthorOPT
   13          | SEP Email AuthorOPT
   14          | SEP Affilliation AuthorOPT
   15          | /* empty */

   16 Nident: NID

   17 Email: EMAIL

   18 Url: URL

   19 Affilliation: TEXT

   20 Abstract: BABS ParaList ENDBLOCK

   21 Aknowledgements: BAKNOW ParaList ENDBLOCK

   22 ParaList: Paragraph BREAK ParaList
   23         | Paragraph

   24 Date: BDATE

   25 Instituition: BINST TEXT ENDARG
   26             | /* empty */

   27 Keywords: BKEY Keys ENDARG
   28         | /* empty */

   29 Keys: TEXT SEP Keys
   30     | TEXT

   31 Toc: BTOC
   32    | /* empty */

   33 Lof: BLOF
   34    | /* empty */

   35 Lot: BLOT
   36    | /* empty */

   37 Body: BBODY Chapterlist ENDARG

   38 Chapterlist: Chapterlist Chapter
   39            | Chapterlist SECTION
   40            | /* empty */

   41 Chapter: C_Title BEGI ElemList ENDARG

   42 C_Title: BCHAP TEXT ENDARG

   43 SECTION: S_Title BEGI ElemList ENDBLOCK

   44 S_Title: BSEC TEXT ENDARG

   45 ElemList: ElemList Elem
   46         | Elem

   47 Elem: CodeBlock
   48     | Paragraph
   49     | SECTION
   50     | Summary
   51     | Float

   52 CodeBlock: BCODE CodeB ENDBLOCK

   53 Paragraph: BParag ParaContend ENDARG

   54 ParaContend: ParaContend TEXT_V
   55            | ParaContend FreeElem
   56            | /* empty */

   57 FreeElem: FootNote
   58         | Ref
   59         | Xref
   60         | CitRef
   61         | Iterm
   62         | Bold
   63         | Italic
   64         | Underline
   65         | InlineCode
   66         | Acronym

   67 Bold: BBOLD BCont ENDARG

   68 BCont: BCont TEXT
   69      | BCont Italic
   70      | BCont Underline
   71      | /* empty */

   72 Italic: BItalic ICont ENDARG

   73 ICont: BCont TEXT
   74      | BCont Bold
   75      | BCont Underline
   76      | /* empty */

   77 Underline: BUnderLine UCont ENDARG

   78 UCont: BCont TEXT
   79      | BCont Bold
   80      | BCont Italic
   81      | /* empty */

   82 Summary: BSUMMARY TEXT_V ENDARG

   83 Ref: BREF TEXT ENDARG

   84 Xref: BXREF TEXT ENDARG

   85 CitRef: BCiteR TEXT ENDARG

   86 Iterm: BIterm TEXT ENDARG

   87 FootNote: BFoteN TEXT ENDARG

   88 InlineCode: BLineCode TEXT ENDARG

   89 Acronym: BAcronym TEXT ENDARG

   90 Float: Figure

   91 Figure: BFig Image Caption ENDARG

   92 Image: BImg Path ENDARG

   93 Caption: BCAP TEXT ENDARG


Terminals, with rules where they appear

$end (0) 0
'$' (36) 1
error (256)
TEXT (258) 3 4 10 19 25 29 30 42 44 68 73 78 83 84 85 86 87 88 89 93
ERROR (259)
ENDARG (260) 3 4 8 25 27 37 41 42 44 53 67 72 77 82 83 84 85 86 87
    88 89 91 92 93
NID (261) 16
SEP (262) 11 12 13 14 29
EMAIL (263) 17
URL (264) 18
ENDBLOCK (265) 20 21 43 52
BTEXT (266)
BREAK (267) 22
BCODE (268) 52
CodeB (269) 52
BCiteR (270) 85
BIterm (271) 86
BBEIU (272)
BXREF (273) 84
BFoteN (274) 87
BAcronym (275) 89
BLineCode (276) 88
BEGI (277) 41 43
BTITLE (278) 3
BSTITLE (279) 4
BAUTHOR (280) 9
BEMAIL (281)
BURL (282)
BAFFIL (283)
BABS (284) 20
BDATE (285) 24
BINST (286) 25
BKEY (287) 27
BAKNOW (288) 21
BLOF (289) 33
BLOT (290) 35
BTOC (291) 31
BBODY (292) 37
BCHAP (293) 42
BLIST (294)
BSEC (295) 44
BParag (296) 53
BREF (297) 83
TEXT_V (298) 54 82
BSUMMARY (299) 82
BBOLD (300) 67
BUnderLine (301) 77
BItalic (302) 72
Path (303) 92
BFig (304) 91
BImg (305) 92
BCAP (306) 93


Nonterminals, with rules where they appear

$accept (53)
    on left: 0
Report (54)
    on left: 1, on right: 0
FrontMatter (55)
    on left: 2, on right: 1
Title (56)
    on left: 3, on right: 2
SubTitle (57)
    on left: 4 5, on right: 2
Authors (58)
    on left: 6 7, on right: 2 6
Author (59)
    on left: 8, on right: 6
Bauthor (60)
    on left: 9, on right: 8
Name (61)
    on left: 10, on right: 8
AuthorOPT (62)
    on left: 11 12 13 14 15, on right: 8 11 12 13 14
Nident (63)
    on left: 16, on right: 11
Email (64)
    on left: 17, on right: 13
Url (65)
    on left: 18, on right: 12
Affilliation (66)
    on left: 19, on right: 14
Abstract (67)
    on left: 20, on right: 2
Aknowledgements (68)
    on left: 21, on right: 2
ParaList (69)
    on left: 22 23, on right: 20 21 22
Date (70)
    on left: 24, on right: 2
Instituition (71)
    on left: 25 26, on right: 2
Keywords (72)
    on left: 27 28, on right: 2
Keys (73)
    on left: 29 30, on right: 27 29
Toc (74)
    on left: 31 32, on right: 2
Lof (75)
    on left: 33 34, on right: 2
Lot (76)
    on left: 35 36, on right: 2
Body (77)
    on left: 37, on right: 1
Chapterlist (78)
    on left: 38 39 40, on right: 37 38 39
Chapter (79)
    on left: 41, on right: 38
C_Title (80)
    on left: 42, on right: 41
SECTION (81)
    on left: 43, on right: 39 49
S_Title (82)
    on left: 44, on right: 43
ElemList (83)
    on left: 45 46, on right: 41 43 45
Elem (84)
    on left: 47 48 49 50 51, on right: 45 46
CodeBlock (85)
    on left: 52, on right: 47
Paragraph (86)
    on left: 53, on right: 22 23 48
ParaContend (87)
    on left: 54 55 56, on right: 53 54 55
FreeElem (88)
    on left: 57 58 59 60 61 62 63 64 65 66, on right: 55
Bold (89)
    on left: 67, on right: 62 74 79
BCont (90)
    on left: 68 69 70 71, on right: 67 68 69 70 73 74 75 78 79 80
Italic (91)
    on left: 72, on right: 63 69 80
ICont (92)
    on left: 73 74 75 76, on right: 72
Underline (93)
    on left: 77, on right: 64 70 75
UCont (94)
    on left: 78 79 80 81, on right: 77
Summary (95)
    on left: 82, on right: 50
Ref (96)
    on left: 83, on right: 58
Xref (97)
    on left: 84, on right: 59
CitRef (98)
    on left: 85, on right: 60
Iterm (99)
    on left: 86, on right: 61
FootNote (100)
    on left: 87, on right: 57
InlineCode (101)
    on left: 88, on right: 65
Acronym (102)
    on left: 89, on right: 66
Float (103)
    on left: 90, on right: 51
Figure (104)
    on left: 91, on right: 90
Image (105)
    on left: 92, on right: 91
Caption (106)
    on left: 93, on right: 91


state 0

    0 $accept: . Report $end

    BTITLE  shift, and go to state 1

    Report       go to state 2
    FrontMatter  go to state 3
    Title        go to state 4


state 1

    3 Title: BTITLE . TEXT ENDARG

    TEXT  shift, and go to state 5


state 2

    0 $accept: Report . $end

    $end  shift, and go to state 6


state 3

    1 Report: FrontMatter . Body '$'

    BBODY  shift, and go to state 7

    Body  go to state 8


state 4

    2 FrontMatter: Title . SubTitle Authors Date Instituition Keywords Abstract Aknowledgements Toc Lof Lot

    BSTITLE  shift, and go to state 9

    $default  reduce using rule 5 (SubTitle)

    SubTitle  go to state 10


state 5

    3 Title: BTITLE TEXT . ENDARG

    ENDARG  shift, and go to state 11


state 6

    0 $accept: Report $end .

    $default  accept


state 7

   37 Body: BBODY . Chapterlist ENDARG

    $default  reduce using rule 40 (Chapterlist)

    Chapterlist  go to state 12


state 8

    1 Report: FrontMatter Body . '$'

    '$'  shift, and go to state 13


state 9

    4 SubTitle: BSTITLE . TEXT ENDARG

    TEXT  shift, and go to state 14


state 10

    2 FrontMatter: Title SubTitle . Authors Date Instituition Keywords Abstract Aknowledgements Toc Lof Lot

    BAUTHOR  shift, and go to state 15

    $default  reduce using rule 7 (Authors)

    Authors  go to state 16
    Author   go to state 17
    Bauthor  go to state 18


state 11

    3 Title: BTITLE TEXT ENDARG .

    $default  reduce using rule 3 (Title)


state 12

   37 Body: BBODY Chapterlist . ENDARG
   38 Chapterlist: Chapterlist . Chapter
   39            | Chapterlist . SECTION

    ENDARG  shift, and go to state 19
    BCHAP   shift, and go to state 20
    BSEC    shift, and go to state 21

    Chapter  go to state 22
    C_Title  go to state 23
    SECTION  go to state 24
    S_Title  go to state 25


state 13

    1 Report: FrontMatter Body '$' .

    $default  reduce using rule 1 (Report)


state 14

    4 SubTitle: BSTITLE TEXT . ENDARG

    ENDARG  shift, and go to state 26


state 15

    9 Bauthor: BAUTHOR .

    $default  reduce using rule 9 (Bauthor)


state 16

    2 FrontMatter: Title SubTitle Authors . Date Instituition Keywords Abstract Aknowledgements Toc Lof Lot

    BDATE  shift, and go to state 27

    Date  go to state 28


state 17

    6 Authors: Author . Authors

    BAUTHOR  shift, and go to state 15

    $default  reduce using rule 7 (Authors)

    Authors  go to state 29
    Author   go to state 17
    Bauthor  go to state 18


state 18

    8 Author: Bauthor . Name AuthorOPT ENDARG

    TEXT  shift, and go to state 30

    Name  go to state 31


state 19

   37 Body: BBODY Chapterlist ENDARG .

    $default  reduce using rule 37 (Body)


state 20

   42 C_Title: BCHAP . TEXT ENDARG

    TEXT  shift, and go to state 32


state 21

   44 S_Title: BSEC . TEXT ENDARG

    TEXT  shift, and go to state 33


state 22

   38 Chapterlist: Chapterlist Chapter .

    $default  reduce using rule 38 (Chapterlist)


state 23

   41 Chapter: C_Title . BEGI ElemList ENDARG

    BEGI  shift, and go to state 34


state 24

   39 Chapterlist: Chapterlist SECTION .

    $default  reduce using rule 39 (Chapterlist)


state 25

   43 SECTION: S_Title . BEGI ElemList ENDBLOCK

    BEGI  shift, and go to state 35


state 26

    4 SubTitle: BSTITLE TEXT ENDARG .

    $default  reduce using rule 4 (SubTitle)


state 27

   24 Date: BDATE .

    $default  reduce using rule 24 (Date)


state 28

    2 FrontMatter: Title SubTitle Authors Date . Instituition Keywords Abstract Aknowledgements Toc Lof Lot

    BINST  shift, and go to state 36

    $default  reduce using rule 26 (Instituition)

    Instituition  go to state 37


state 29

    6 Authors: Author Authors .

    $default  reduce using rule 6 (Authors)


state 30

   10 Name: TEXT .

    $default  reduce using rule 10 (Name)


state 31

    8 Author: Bauthor Name . AuthorOPT ENDARG

    SEP  shift, and go to state 38

    $default  reduce using rule 15 (AuthorOPT)

    AuthorOPT  go to state 39


state 32

   42 C_Title: BCHAP TEXT . ENDARG

    ENDARG  shift, and go to state 40


state 33

   44 S_Title: BSEC TEXT . ENDARG

    ENDARG  shift, and go to state 41


state 34

   41 Chapter: C_Title BEGI . ElemList ENDARG

    BCODE     shift, and go to state 42
    BSEC      shift, and go to state 21
    BParag    shift, and go to state 43
    BSUMMARY  shift, and go to state 44
    BFig      shift, and go to state 45

    SECTION    go to state 46
    S_Title    go to state 25
    ElemList   go to state 47
    Elem       go to state 48
    CodeBlock  go to state 49
    Paragraph  go to state 50
    Summary    go to state 51
    Float      go to state 52
    Figure     go to state 53


state 35

   43 SECTION: S_Title BEGI . ElemList ENDBLOCK

    BCODE     shift, and go to state 42
    BSEC      shift, and go to state 21
    BParag    shift, and go to state 43
    BSUMMARY  shift, and go to state 44
    BFig      shift, and go to state 45

    SECTION    go to state 46
    S_Title    go to state 25
    ElemList   go to state 54
    Elem       go to state 48
    CodeBlock  go to state 49
    Paragraph  go to state 50
    Summary    go to state 51
    Float      go to state 52
    Figure     go to state 53


state 36

   25 Instituition: BINST . TEXT ENDARG

    TEXT  shift, and go to state 55


state 37

    2 FrontMatter: Title SubTitle Authors Date Instituition . Keywords Abstract Aknowledgements Toc Lof Lot

    BKEY  shift, and go to state 56

    $default  reduce using rule 28 (Keywords)

    Keywords  go to state 57


state 38

   11 AuthorOPT: SEP . Nident AuthorOPT
   12          | SEP . Url AuthorOPT
   13          | SEP . Email AuthorOPT
   14          | SEP . Affilliation AuthorOPT

    TEXT   shift, and go to state 58
    NID    shift, and go to state 59
    EMAIL  shift, and go to state 60
    URL    shift, and go to state 61

    Nident        go to state 62
    Email         go to state 63
    Url           go to state 64
    Affilliation  go to state 65


state 39

    8 Author: Bauthor Name AuthorOPT . ENDARG

    ENDARG  shift, and go to state 66


state 40

   42 C_Title: BCHAP TEXT ENDARG .

    $default  reduce using rule 42 (C_Title)


state 41

   44 S_Title: BSEC TEXT ENDARG .

    $default  reduce using rule 44 (S_Title)


state 42

   52 CodeBlock: BCODE . CodeB ENDBLOCK

    CodeB  shift, and go to state 67


state 43

   53 Paragraph: BParag . ParaContend ENDARG

    $default  reduce using rule 56 (ParaContend)

    ParaContend  go to state 68


state 44

   82 Summary: BSUMMARY . TEXT_V ENDARG

    TEXT_V  shift, and go to state 69


state 45

   91 Figure: BFig . Image Caption ENDARG

    BImg  shift, and go to state 70

    Image  go to state 71


state 46

   49 Elem: SECTION .

    $default  reduce using rule 49 (Elem)


state 47

   41 Chapter: C_Title BEGI ElemList . ENDARG
   45 ElemList: ElemList . Elem

    ENDARG    shift, and go to state 72
    BCODE     shift, and go to state 42
    BSEC      shift, and go to state 21
    BParag    shift, and go to state 43
    BSUMMARY  shift, and go to state 44
    BFig      shift, and go to state 45

    SECTION    go to state 46
    S_Title    go to state 25
    Elem       go to state 73
    CodeBlock  go to state 49
    Paragraph  go to state 50
    Summary    go to state 51
    Float      go to state 52
    Figure     go to state 53


state 48

   46 ElemList: Elem .

    $default  reduce using rule 46 (ElemList)


state 49

   47 Elem: CodeBlock .

    $default  reduce using rule 47 (Elem)


state 50

   48 Elem: Paragraph .

    $default  reduce using rule 48 (Elem)


state 51

   50 Elem: Summary .

    $default  reduce using rule 50 (Elem)


state 52

   51 Elem: Float .

    $default  reduce using rule 51 (Elem)


state 53

   90 Float: Figure .

    $default  reduce using rule 90 (Float)


state 54

   43 SECTION: S_Title BEGI ElemList . ENDBLOCK
   45 ElemList: ElemList . Elem

    ENDBLOCK  shift, and go to state 74
    BCODE     shift, and go to state 42
    BSEC      shift, and go to state 21
    BParag    shift, and go to state 43
    BSUMMARY  shift, and go to state 44
    BFig      shift, and go to state 45

    SECTION    go to state 46
    S_Title    go to state 25
    Elem       go to state 73
    CodeBlock  go to state 49
    Paragraph  go to state 50
    Summary    go to state 51
    Float      go to state 52
    Figure     go to state 53


state 55

   25 Instituition: BINST TEXT . ENDARG

    ENDARG  shift, and go to state 75


state 56

   27 Keywords: BKEY . Keys ENDARG

    TEXT  shift, and go to state 76

    Keys  go to state 77


state 57

    2 FrontMatter: Title SubTitle Authors Date Instituition Keywords . Abstract Aknowledgements Toc Lof Lot

    BABS  shift, and go to state 78

    Abstract  go to state 79


state 58

   19 Affilliation: TEXT .

    $default  reduce using rule 19 (Affilliation)


state 59

   16 Nident: NID .

    $default  reduce using rule 16 (Nident)


state 60

   17 Email: EMAIL .

    $default  reduce using rule 17 (Email)


state 61

   18 Url: URL .

    $default  reduce using rule 18 (Url)


state 62

   11 AuthorOPT: SEP Nident . AuthorOPT

    SEP  shift, and go to state 38

    $default  reduce using rule 15 (AuthorOPT)

    AuthorOPT  go to state 80


state 63

   13 AuthorOPT: SEP Email . AuthorOPT

    SEP  shift, and go to state 38

    $default  reduce using rule 15 (AuthorOPT)

    AuthorOPT  go to state 81


state 64

   12 AuthorOPT: SEP Url . AuthorOPT

    SEP  shift, and go to state 38

    $default  reduce using rule 15 (AuthorOPT)

    AuthorOPT  go to state 82


state 65

   14 AuthorOPT: SEP Affilliation . AuthorOPT

    SEP  shift, and go to state 38

    $default  reduce using rule 15 (AuthorOPT)

    AuthorOPT  go to state 83


state 66

    8 Author: Bauthor Name AuthorOPT ENDARG .

    $default  reduce using rule 8 (Author)


state 67

   52 CodeBlock: BCODE CodeB . ENDBLOCK

    ENDBLOCK  shift, and go to state 84


state 68

   53 Paragraph: BParag ParaContend . ENDARG
   54 ParaContend: ParaContend . TEXT_V
   55            | ParaContend . FreeElem

    ENDARG      shift, and go to state 85
    BCiteR      shift, and go to state 86
    BIterm      shift, and go to state 87
    BXREF       shift, and go to state 88
    BFoteN      shift, and go to state 89
    BAcronym    shift, and go to state 90
    BLineCode   shift, and go to state 91
    BREF        shift, and go to state 92
    TEXT_V      shift, and go to state 93
    BBOLD       shift, and go to state 94
    BUnderLine  shift, and go to state 95
    BItalic     shift, and go to state 96

    FreeElem    go to state 97
    Bold        go to state 98
    Italic      go to state 99
    Underline   go to state 100
    Ref         go to state 101
    Xref        go to state 102
    CitRef      go to state 103
    Iterm       go to state 104
    FootNote    go to state 105
    InlineCode  go to state 106
    Acronym     go to state 107


state 69

   82 Summary: BSUMMARY TEXT_V . ENDARG

    ENDARG  shift, and go to state 108


state 70

   92 Image: BImg . Path ENDARG

    Path  shift, and go to state 109


state 71

   91 Figure: BFig Image . Caption ENDARG

    BCAP  shift, and go to state 110

    Caption  go to state 111


state 72

   41 Chapter: C_Title BEGI ElemList ENDARG .

    $default  reduce using rule 41 (Chapter)


state 73

   45 ElemList: ElemList Elem .

    $default  reduce using rule 45 (ElemList)


state 74

   43 SECTION: S_Title BEGI ElemList ENDBLOCK .

    $default  reduce using rule 43 (SECTION)


state 75

   25 Instituition: BINST TEXT ENDARG .

    $default  reduce using rule 25 (Instituition)


state 76

   29 Keys: TEXT . SEP Keys
   30     | TEXT .

    SEP  shift, and go to state 112

    $default  reduce using rule 30 (Keys)


state 77

   27 Keywords: BKEY Keys . ENDARG

    ENDARG  shift, and go to state 113


state 78

   20 Abstract: BABS . ParaList ENDBLOCK

    BParag  shift, and go to state 43

    ParaList   go to state 114
    Paragraph  go to state 115


state 79

    2 FrontMatter: Title SubTitle Authors Date Instituition Keywords Abstract . Aknowledgements Toc Lof Lot

    BAKNOW  shift, and go to state 116

    Aknowledgements  go to state 117


state 80

   11 AuthorOPT: SEP Nident AuthorOPT .

    $default  reduce using rule 11 (AuthorOPT)


state 81

   13 AuthorOPT: SEP Email AuthorOPT .

    $default  reduce using rule 13 (AuthorOPT)


state 82

   12 AuthorOPT: SEP Url AuthorOPT .

    $default  reduce using rule 12 (AuthorOPT)


state 83

   14 AuthorOPT: SEP Affilliation AuthorOPT .

    $default  reduce using rule 14 (AuthorOPT)


state 84

   52 CodeBlock: BCODE CodeB ENDBLOCK .

    $default  reduce using rule 52 (CodeBlock)


state 85

   53 Paragraph: BParag ParaContend ENDARG .

    $default  reduce using rule 53 (Paragraph)


state 86

   85 CitRef: BCiteR . TEXT ENDARG

    TEXT  shift, and go to state 118


state 87

   86 Iterm: BIterm . TEXT ENDARG

    TEXT  shift, and go to state 119


state 88

   84 Xref: BXREF . TEXT ENDARG

    TEXT  shift, and go to state 120


state 89

   87 FootNote: BFoteN . TEXT ENDARG

    TEXT  shift, and go to state 121


state 90

   89 Acronym: BAcronym . TEXT ENDARG

    TEXT  shift, and go to state 122


state 91

   88 InlineCode: BLineCode . TEXT ENDARG

    TEXT  shift, and go to state 123


state 92

   83 Ref: BREF . TEXT ENDARG

    TEXT  shift, and go to state 124


state 93

   54 ParaContend: ParaContend TEXT_V .

    $default  reduce using rule 54 (ParaContend)


state 94

   67 Bold: BBOLD . BCont ENDARG

    $default  reduce using rule 71 (BCont)

    BCont  go to state 125


state 95

   77 Underline: BUnderLine . UCont ENDARG

    ENDARG    reduce using rule 81 (UCont)
    $default  reduce using rule 71 (BCont)

    BCont  go to state 126
    UCont  go to state 127


state 96

   72 Italic: BItalic . ICont ENDARG

    ENDARG    reduce using rule 76 (ICont)
    $default  reduce using rule 71 (BCont)

    BCont  go to state 128
    ICont  go to state 129


state 97

   55 ParaContend: ParaContend FreeElem .

    $default  reduce using rule 55 (ParaContend)


state 98

   62 FreeElem: Bold .

    $default  reduce using rule 62 (FreeElem)


state 99

   63 FreeElem: Italic .

    $default  reduce using rule 63 (FreeElem)


state 100

   64 FreeElem: Underline .

    $default  reduce using rule 64 (FreeElem)


state 101

   58 FreeElem: Ref .

    $default  reduce using rule 58 (FreeElem)


state 102

   59 FreeElem: Xref .

    $default  reduce using rule 59 (FreeElem)


state 103

   60 FreeElem: CitRef .

    $default  reduce using rule 60 (FreeElem)


state 104

   61 FreeElem: Iterm .

    $default  reduce using rule 61 (FreeElem)


state 105

   57 FreeElem: FootNote .

    $default  reduce using rule 57 (FreeElem)


state 106

   65 FreeElem: InlineCode .

    $default  reduce using rule 65 (FreeElem)


state 107

   66 FreeElem: Acronym .

    $default  reduce using rule 66 (FreeElem)


state 108

   82 Summary: BSUMMARY TEXT_V ENDARG .

    $default  reduce using rule 82 (Summary)


state 109

   92 Image: BImg Path . ENDARG

    ENDARG  shift, and go to state 130


state 110

   93 Caption: BCAP . TEXT ENDARG

    TEXT  shift, and go to state 131


state 111

   91 Figure: BFig Image Caption . ENDARG

    ENDARG  shift, and go to state 132


state 112

   29 Keys: TEXT SEP . Keys

    TEXT  shift, and go to state 76

    Keys  go to state 133


state 113

   27 Keywords: BKEY Keys ENDARG .

    $default  reduce using rule 27 (Keywords)


state 114

   20 Abstract: BABS ParaList . ENDBLOCK

    ENDBLOCK  shift, and go to state 134


state 115

   22 ParaList: Paragraph . BREAK ParaList
   23         | Paragraph .

    BREAK  shift, and go to state 135

    $default  reduce using rule 23 (ParaList)


state 116

   21 Aknowledgements: BAKNOW . ParaList ENDBLOCK

    BParag  shift, and go to state 43

    ParaList   go to state 136
    Paragraph  go to state 115


state 117

    2 FrontMatter: Title SubTitle Authors Date Instituition Keywords Abstract Aknowledgements . Toc Lof Lot

    BTOC  shift, and go to state 137

    $default  reduce using rule 32 (Toc)

    Toc  go to state 138


state 118

   85 CitRef: BCiteR TEXT . ENDARG

    ENDARG  shift, and go to state 139


state 119

   86 Iterm: BIterm TEXT . ENDARG

    ENDARG  shift, and go to state 140


state 120

   84 Xref: BXREF TEXT . ENDARG

    ENDARG  shift, and go to state 141


state 121

   87 FootNote: BFoteN TEXT . ENDARG

    ENDARG  shift, and go to state 142


state 122

   89 Acronym: BAcronym TEXT . ENDARG

    ENDARG  shift, and go to state 143


state 123

   88 InlineCode: BLineCode TEXT . ENDARG

    ENDARG  shift, and go to state 144


state 124

   83 Ref: BREF TEXT . ENDARG

    ENDARG  shift, and go to state 145


state 125

   67 Bold: BBOLD BCont . ENDARG
   68 BCont: BCont . TEXT
   69      | BCont . Italic
   70      | BCont . Underline

    TEXT        shift, and go to state 146
    ENDARG      shift, and go to state 147
    BUnderLine  shift, and go to state 95
    BItalic     shift, and go to state 96

    Italic     go to state 148
    Underline  go to state 149


state 126

   68 BCont: BCont . TEXT
   69      | BCont . Italic
   70      | BCont . Underline
   78 UCont: BCont . TEXT
   79      | BCont . Bold
   80      | BCont . Italic

    TEXT        shift, and go to state 150
    BBOLD       shift, and go to state 94
    BUnderLine  shift, and go to state 95
    BItalic     shift, and go to state 96

    Bold       go to state 151
    Italic     go to state 152
    Underline  go to state 149


state 127

   77 Underline: BUnderLine UCont . ENDARG

    ENDARG  shift, and go to state 153


state 128

   68 BCont: BCont . TEXT
   69      | BCont . Italic
   70      | BCont . Underline
   73 ICont: BCont . TEXT
   74      | BCont . Bold
   75      | BCont . Underline

    TEXT        shift, and go to state 154
    BBOLD       shift, and go to state 94
    BUnderLine  shift, and go to state 95
    BItalic     shift, and go to state 96

    Bold       go to state 155
    Italic     go to state 148
    Underline  go to state 156


state 129

   72 Italic: BItalic ICont . ENDARG

    ENDARG  shift, and go to state 157


state 130

   92 Image: BImg Path ENDARG .

    $default  reduce using rule 92 (Image)


state 131

   93 Caption: BCAP TEXT . ENDARG

    ENDARG  shift, and go to state 158


state 132

   91 Figure: BFig Image Caption ENDARG .

    $default  reduce using rule 91 (Figure)


state 133

   29 Keys: TEXT SEP Keys .

    $default  reduce using rule 29 (Keys)


state 134

   20 Abstract: BABS ParaList ENDBLOCK .

    $default  reduce using rule 20 (Abstract)


state 135

   22 ParaList: Paragraph BREAK . ParaList
